# organizational-memory-system

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: repository-topics.md
.github/workflows/: ci.yml
docs/: analytics_metrics.md  api_reference.md  architecture.md  benchmark_visualizations.md  case_studies.md  demos.md  deployment.md  examples_gallery.md  extraction.md  index.md  interactive_walkthrough.md  persistence.md  production_readiness.md  recall.md  recall_evaluation.md  release_checklist.md  reporting_walkthrough.md  repository_walkthrough.md  roadmap.md  schemas.md  security.md  testing.md  user_guide.md  workflow_intelligence.md
docs/assets/: sample_follow_up_report.md  sample_meeting_summary.md  sample_memory_report.md  sample_weekly_report.md
docs/releases/: latest.md  v0.1.0.md
examples/: storage_demo.py
examples/analytics/: analytics_expected_metrics.json  analytics_meetings.json  analytics_memory_snapshot.json  analytics_report_example.py  decision_velocity_example.py  memory_health_example.py  open_loop_metrics_example.py
examples/datasets/: board_operating_memory.json  company_memory_full.json  sprint_operating_memory.json  startup_operating_memory.json
examples/demos/: board_meeting_demo.py  company_memory_demo.py  organizational_timeline_demo.py  sprint_planning_demo.py  startup_meeting_demo.py
examples/recall/: decision_recall_example.py  keyword_search_example.py  natural_language_recall_example.py  open_loop_recall_example.py
examples/reports/: follow_up_report_example.py  meeting_summary_example.py  organizational_memory_report_example.py  weekly_report_example.py
examples/transcripts/: board_review_meeting.txt  sprint_planning_meeting.md  startup_product_meeting.txt
examples/tutorials/: tutorial_04_full_workflow.py  (+3 more)
release_artifacts/: cli_command_reference.md  demo_script.md  feature_summary.md  known_limitations.md  validation_summary.txt
scripts/: check_coverage.py  post_release_verification.py  run_extraction_benchmarks.py  run_load_tests.py  run_memory_benchmarks.py  run_performance_benchmarks.py  run_recall_benchmarks.py  run_release_validation.py  run_report_benchmarks.py  run_storage_benchmarks.py  run_stress_tests.py  verify_package.py
tests/: conftest.py  test_accountability.py  test_accountability_report.py  test_action_item.py  test_action_item_extractor.py  test_analytics_examples.py  test_analytics_fixtures.py  test_analytics_integration.py  test_audit.py  test_backup.py  test_base_schema.py  test_benchmarks.py  test_bottlenecks.py  test_check_coverage.py  test_cli.py  test_cli_analytics.py  test_cli_benchmark.py  test_cli_captures.py  test_cli_commitments.py  test_cli_config.py  test_cli_demo.py  test_cli_export.py  test_cli_foundation.py  test_cli_ingest.py  test_cli_integration.py  test_cli_open_loops.py  test_cli_recall.py  test_cli_report.py  test_commitment.py  test_commitment_completion.py  test_commitment_extractor.py  test_commitment_report.py  test_commitment_repository.py  test_commitment_search.py  test_composite_ranking.py  test_confidence.py  test_config.py  test_config_validation.py  test_constants.py  test_coverage_config.py  (+135 more)
(+182 files in other folders)
