[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "organizational-memory"
version = "0.1.0"
description = "Convert meetings, conversations, and notes into structured organizational memory."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aditya" }]
keywords = [
    "organizational-memory",
    "knowledge-management",
    "meetings",
    "decisions",
    "tasks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/aditya89bh/organizational-memory-system"
Repository = "https://github.com/aditya89bh/organizational-memory-system"
Issues = "https://github.com/aditya89bh/organizational-memory-system/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["organizational_memory"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["^\\.venv/", "^build/", "^dist/"]
